SOFTWARE_FACTORY/kaanbal-templates/templates/backend/laravel-inertia-react/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: placeholder-app
  labels:
    app: placeholder-app
spec:
  selector:
    app: placeholder-app
  ports:
  - port: 8000
    targetPort: 8000
